--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,6 +1,8 @@
 .bg-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(https://wallpaperaccess.com/full/5651980.jpg);
+  height: 100;
+  width: 100%;
   background-size: cover; 
   background-position: center;
   background-attachment: fixed;
